--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -18,18 +18,66 @@ description:
 
 brew install memcached 
 安装完成后，使用如下命令启动memcached：
-memcached -m 32 -p 11211 -d         
+memcached -m 32 -p 11211 -d      
 
-      
+* **SSH转发原理**
+
+  很多情况下我们本地机和服务器之间的数据连接需要SSH来加密：比如翻墙，受限的服务器访问。这个时候我们可以通过端口转发，将TCP端口的数据通过SSH连接来转发，着放佛开了一条“隧道”。相信在应用Telnet，SMTP等服务的时候没少使用过，使用起来既安全又方便![ssh隧道](http://7xomz3.com1.z0.glb.clouddn.com/ssh.jpg)
+
+  举个我最常用的例子：使用SSH搭建Jupyter notebook服务器了。我们在本地连接到远程服务器，使用本地端口转发
+
+  ```bash
+  ssh -L <local port>:<remote host>:<remote port> <SSH hostname>
+  ```
+
+  1. 我们首先在服务器启动一个jupyter notebook服务。
+
+     创建一个配置文件 jupyter_config.py. 内容如下：
+
+     ```bash
+     c.NotebookApp.ip = 'localhost' # 指定
+     c.NotebookApp.open_browser = False # 关闭自动打开浏览器
+     c.NotebookApp.port = 8888 # 端口随意指定
+     c.NotebookApp.password = u'sha1:d8334*******' # 复制前一步生成的密钥
+
+     作者：叶俊贤
+     链接：https://www.jianshu.com/p/a9de7a089834
+     來源：简书
+     著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+     ```
+
+     然后运行
+
+     ```bash
+     jupyter notebook --config=jupyter_config.py
+     ```
+
+  这样就启动了一个jupyter服务。
+
+  2. 本地端口转发：
+
+     我们在本地机器中执行：
+
+     ```bash
+     ssh -N -f -L localhost:8888:localhost:8889 remote_user@remote_host
+     ```
+
+     这里，-N知名没有用命令要远程执行；-f是后台执行SSH（可以没有）；-L是指定端口配置。
+
+  3. 打开浏览器，输入地址： http://localhost:8888/就可以使用服务器端的jupyter notebook 了。
+
+  参考： [实战SSH端口转发](https://www.ibm.com/developerworks/cn/linux/l-cn-sshforward/)
+
+
 + **GIT 使用https记住密码**      
-使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。   
+  使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。   
 
 + **Jupyter notebook设置**        
-Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
+  Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
 + **MAC鼠标滚轮反向**        
-MAC的鼠标与触摸板都是采用的自然滑滚，这对于频繁切换windows／mac的人简直要崩溃：鼠标滚轮不一样啊。那么推荐可以单独对MAC的鼠标与触摸板进行[滑滚设置的插件](https://github.com/pilotmoon/Scroll-Reverser)。          
+  MAC的鼠标与触摸板都是采用的自然滑滚，这对于频繁切换windows／mac的人简直要崩溃：鼠标滚轮不一样啊。那么推荐可以单独对MAC的鼠标与触摸板进行[滑滚设置的插件](https://github.com/pilotmoon/Scroll-Reverser)。          
 + **Dash helper**        
-[Dash for MacOS](https://kapeli.com/dash)太强大了，没时间多少了，赶紧上船吧。     
+  [Dash for MacOS](https://kapeli.com/dash)太强大了，没时间多少了，赶紧上船吧。     
 + **Home brew设置中科大（或coding）源**        
 ```python
 替换brew.git:
@@ -38,12 +86,12 @@ git remote set-url origin https://mirrors.ustc.edu.cn/brew.git
 替换homebrew-core.git:
 cd "$(brew --repo)/Library/Taps/homebrew/homebrew-core"
 git remote set-url origin https://mirrors.ustc.edu.cn/homebrew-core.git
-```     
+```
 coding的更新速度貌似比中科大还快，节点也更多。
 ```python
 $ cd /usr/local/Homebrew && git remote set-url origin https://git.coding.net/homebrew/homebrew.git
 $ cd $home && brew update
-```          
+```
 人生不如意之事十之八九，倘若中科大也被和谐了，那么可以切换回官方，直接brew doctor，按照提示来，或者手动设置：     
 ```python
 重置brew.git:
