--- a/_posts/计算机/2015-11-25-台大机器学习基石笔记4-3.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石笔记4-3.md
@@ -23,10 +23,10 @@ description:
 </tr>
 <tr>
 <td style="padding-left: 7px; padding-right: 7px; border-top: none; border-left: solid 0.5pt; border-bottom: solid 0.5pt; border-right: solid 0.5pt;">
-<p>未知的橙色小球比例<img src="http://images.cnitblog.com/blog/489652/201502/060921508283709.png" alt=""></p>
+<p>未知的橙色小球比例<img src="https://images.cnitblog.com/blog/489652/201502/060921508283709.png" alt=""></p>
 </td>
 <td style="padding-left: 7px; padding-right: 7px; border-top: none; border-left: none; border-bottom: solid 0.5pt; border-right: solid 0.5pt;">
-<p>某一确定的假设在整个X输入空间中，输入向量x满足条件<img src="http://images.cnitblog.com/blog/489652/201502/060921511873051.png" alt=""> 的占整个输入空间的比例</p>
+<p>某一确定的假设在整个X输入空间中，输入向量x满足条件<img src="https://images.cnitblog.com/blog/489652/201502/060921511873051.png" alt=""> 的占整个输入空间的比例</p>
 </td>
 </tr>
 <tr>
@@ -34,7 +34,7 @@ description:
 <p>抽取的小球∈整个罐子中的小球</p>
 </td>
 <td style="padding-left: 7px; padding-right: 7px; border-top: none; border-left: none; border-bottom: solid 0.5pt; border-right: solid 0.5pt;">
-<p>训练输入样本集<img src="http://images.cnitblog.com/blog/489652/201502/060921515158851.png" alt=""> 整个数据集X</p>
+<p>训练输入样本集<img src="https://images.cnitblog.com/blog/489652/201502/060921515158851.png" alt=""> 整个数据集X</p>
 </td>
 </tr>
 <tr>
@@ -42,7 +42,7 @@ description:
 <p>橙色小球</p>
 </td>
 <td style="padding-left: 7px; padding-right: 7px; border-top: none; border-left: none; border-bottom: solid 0.5pt; border-right: solid 0.5pt;">
-<p>假设h作用于此输入向量x与给定的输出不相等<img src="http://images.cnitblog.com/blog/489652/201502/060921517961638.png" alt=""></p>
+<p>假设h作用于此输入向量x与给定的输出不相等<img src="https://images.cnitblog.com/blog/489652/201502/060921517961638.png" alt=""></p>
 </td>
 </tr>
 <tr>
@@ -50,7 +50,7 @@ description:
 <p>绿色小球</p>
 </td>
 <td style="padding-left: 7px; padding-right: 7px; border-top: none; border-left: none; border-bottom: solid 0.5pt; border-right: solid 0.5pt;">
-<p>假设h作用于此输入向量x与给定的输出相等<img src="http://images.cnitblog.com/blog/489652/201502/060921520156937.png" alt=""></p>
+<p>假设h作用于此输入向量x与给定的输出相等<img src="https://images.cnitblog.com/blog/489652/201502/060921520156937.png" alt=""></p>
 </td>
 </tr>
 <tr>
@@ -64,7 +64,7 @@ description:
 </tbody>
 </table>
 </div>
-<center><a href="http://www.cnblogs.com/ymingjingr/p/4276386.html">该表来自博客园.杜少</a></center>   
+<center><a href="https://www.cnblogs.com/ymingjingr/p/4276386.html">该表来自博客园.杜少</a></center>   
 
 我们将上一节的罐子抽样问题类比到机器学习：我们要求target function f。如果我们求出的h(x)=f(x),那么就是说h(x)是对的，否则h(x)是错的。我们手上有training examples,D：(x1,y1),....,(xN,yN)。所以可以求出在training examples上h(x)的错误率，但是还是不知道在整个样本上的错误率。      
 
