--- a/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
+++ b/_posts/计算机/2016-01-12-神经网络识别手写体数字.md
@@ -33,15 +33,15 @@ description:
 当然，如果这一节仅仅是在介绍如何写一段程序来识别手写体，那么这一章本可以很短。但实际上沿着这条思路下来，我们会**衍生**（develop？）出很多关于神经网络的关键思想，比如两种不同的神经元（感知机和sigmoid 神经元），以及被广泛熟知的标准神经网络学习算法：随机梯度下降算法。自始至终，我都在极力地解释为什么这样来做，并且一直在给大家建立一种神经网络的直观印象。如果我详细阐释基本的概念，这会需要更多的讨论，但是对于你更深层次的理解这些概念还是很有帮助的！最后在本书的最后一章，我们将会理解深度学习是什么，以及为什么它这么重要。    
 
 ## 感知器    
-神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](http://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。      
+神经网络是什么？开始我将会解释一种被称为感知器的人工神经元。神经元这一概念最早是由[Frank Rosenblatt](https://en.wikipedia.org/wiki/Frank_Rosenblatt)于1950s到1960s受[Warren McCulloch](https://en.wikipedia.org/wiki/Warren_McCulloch)和[Walter Pitts](https://en.wikipedia.org/wiki/Walter_Pitts)的[研究](https://scholar.google.ca/scholar?cluster=4035975255085082870)所启发而提出的。今天，使用其他的人工神经元模型更为普遍---在本书中以及当前人工神经网络的研究中主要被使用的神经元模型被称为 sigmoid神经元。我们也将会简单讲解 sigmoid 神经元。但为了明白为什么sigmoid 神经元如此定义，还是有必要首先去花些时间来理解感知器。      
 
-那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
+那么感知器是如何工作的呢？一个感知器接收若干**二进制**（binary?）输入,<img src="https://www.forkosh.com/mathtex.cgi? x_1, x_2, \ldots">然后产生一个二进制输出：
 <center>    
 
 ![enter description here][3]     
 
 </center>
-这个例子中的感知器有三个输入,<img src="http://www.forkosh.com/mathtex.cgi? x_1, x_2,x_3, \ldots">。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<img src="http://www.forkosh.com/mathtex.cgi? w_1, w_2, \ldots">用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<img src="http://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j">大于或者小于阈值（threshold value）决定了神经元的输出是0或1。阈值就像权重一样是个实数，同样也是神经元的一个参数。我们用精确的代数式来表达：     
+这个例子中的感知器有三个输入,<img src="https://www.forkosh.com/mathtex.cgi? x_1, x_2,x_3, \ldots">。一般来说它可以有更多或者更少的输入。Rosenblatt提出了一种简单的规则来计算输出---权重：<img src="https://www.forkosh.com/mathtex.cgi? w_1, w_2, \ldots">用这些实数来表示各自对应的输入关于输出的**重要性**（importance?）。输入的加权和<img src="https://www.forkosh.com/mathtex.cgi? \sum_j w_j x_j">大于或者小于阈值（threshold value）决定了神经元的输出是0或1。阈值就像权重一样是个实数，同样也是神经元的一个参数。我们用精确的代数式来表达：     
 
 <center>    
 
@@ -56,9 +56,9 @@ description:
 2.  不知道女（或者男）友想不想陪着你？ 
 3.  那天会不会堵车很严重。    
 
-我们可以将这三个因素用对应的二元变量  <img src="http://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="http://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）友愿意去就令 <img src="http://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
+我们可以将这三个因素用对应的二元变量  <img src="https://www.forkosh.com/mathtex.cgi? x_1,x_2,x_3">  来表示。举例来说：如果天气好，就令 <img src="https://www.forkosh.com/mathtex.cgi? x_1"> = 1,否则为 0；同样，女（男）友愿意去就令 <img src="https://www.forkosh.com/mathtex.cgi? x_2"> = 1,否则为 0；对于堵车也这样来做。      
 
-现在假设你特别想去，不管女（男）友愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用感知器来模拟这次决策。一种方式是令 <img src="http://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="http://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="http://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）友和交通情况。最大值<img src="http://www.forkosh.com/mathtex.cgi? w_1"> 表示天气因素要比其他两种情况影响大。最后（假设）你选择阈值为5。最后这个神经元运行决策模型的时候，如果天气好，它就输出1，反之输出0。你会发现输出和女友愿意与否，交通情况没有什么关系。     
+现在假设你特别想去，不管女（男）友愿不愿意陪你去了，也不管堵车怎么回事了。但那天天气真的很重要啊，你总不能冒大雨游长城吧！这时候可以用感知器来模拟这次决策。一种方式是令 <img src="https://www.forkosh.com/mathtex.cgi? w_1"> = 6来对应天气,<img src="https://www.forkosh.com/mathtex.cgi? w_2"> = 2和<img src="https://www.forkosh.com/mathtex.cgi? w_3"> = 2 来对应女（男）友和交通情况。最大值<img src="https://www.forkosh.com/mathtex.cgi? w_1"> 表示天气因素要比其他两种情况影响大。最后（假设）你选择阈值为5。最后这个神经元运行决策模型的时候，如果天气好，它就输出1，反之输出0。你会发现输出和女友愿意与否，交通情况没有什么关系。     
 
 通过给阈值和权重设置不同的值，我们能够得到不同的决策模型。举例来说，令阈值为3。你会发现天气好或者女友愿意，交通也好都会导致输出为1。换句话说，它是一个不同的模型。减少阈值意味着你更倾向于去长城。     
 
@@ -75,7 +75,7 @@ description:
 
 
 
-简化对感知器的描述。<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j %3E %5Cmbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。第一处是将<img src="http://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j">换成点积形式：<img src="http://www.forkosh.com/mathtex.cgi? w %5Ccdot x %5Cequiv %5Csum_j w_j x_j">,这里<img src="http://www.forkosh.com/mathtex.cgi? w">和<img src="http://www.forkosh.com/mathtex.cgi? x">分别是权重和输入的向量形式。第二处变换是将阈值移到等式的左边，也即用感知器中常见的概念偏差（bias）来代替：<img src="http://www.forkosh.com/mathtex.cgi?b %5Cequiv-%5Cmbox{threshold}">。这样感知器可重写为如下形式：      
+简化对感知器的描述。<img src="https://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j %3E %5Cmbox{threshold}"> 显得相当麻烦，这里对符号进行两处变换。第一处是将<img src="https://www.forkosh.com/mathtex.cgi? %5Csum_j w_j x_j">换成点积形式：<img src="https://www.forkosh.com/mathtex.cgi? w %5Ccdot x %5Cequiv %5Csum_j w_j x_j">,这里<img src="https://www.forkosh.com/mathtex.cgi? w">和<img src="https://www.forkosh.com/mathtex.cgi? x">分别是权重和输入的向量形式。第二处变换是将阈值移到等式的左边，也即用感知器中常见的概念偏差（bias）来代替：<img src="https://www.forkosh.com/mathtex.cgi?b %5Cequiv-%5Cmbox{threshold}">。这样感知器可重写为如下形式：      
    
 <center>      
 
@@ -94,7 +94,7 @@ description:
 是负的。通过以上分析我们知道这个感知器的作用是一个“与非”门。         
 
 
-这个“与非”门的例子说明我们可以使用感知器计算简单逻辑函数。实际上我们可以使用感知器网络计算任意的逻辑函数。因为“与非”门在计算中非常普遍，所以我们可以使用“与非”门构建任意计算。举个例子，我们使用若干“与非”门来组建一个电路对<img src="http://www.forkosh.com/mathtex.cgi?x_1"> 和<img src="http://www.forkosh.com/mathtex.cgi?x_2">相加。这就需要计算<img src="http://www.forkosh.com/mathtex.cgi?x_1 %5Coplus x_2">的逐位相加和，以及进位（当<img src="http://www.forkosh.com/mathtex.cgi?x_1">和<img src="http://www.forkosh.com/mathtex.cgi?x_2">都是1时，要进1 ）。进位位正好是<img src="http://www.forkosh.com/mathtex.cgi?x_1x_2">:      
+这个“与非”门的例子说明我们可以使用感知器计算简单逻辑函数。实际上我们可以使用感知器网络计算任意的逻辑函数。因为“与非”门在计算中非常普遍，所以我们可以使用“与非”门构建任意计算。举个例子，我们使用若干“与非”门来组建一个电路对<img src="https://www.forkosh.com/mathtex.cgi?x_1"> 和<img src="https://www.forkosh.com/mathtex.cgi?x_2">相加。这就需要计算<img src="https://www.forkosh.com/mathtex.cgi?x_1 %5Coplus x_2">的逐位相加和，以及进位（当<img src="https://www.forkosh.com/mathtex.cgi?x_1">和<img src="https://www.forkosh.com/mathtex.cgi?x_2">都是1时，要进1 ）。进位位正好是<img src="https://www.forkosh.com/mathtex.cgi?x_1x_2">:      
 <center>      
 
 ![enter description here][8]
@@ -117,7 +117,7 @@ description:
 
 </center>      
 
-现在，我已经将像<img src="http://www.forkosh.com/mathtex.cgi?x_1 x_2">这样的两个变量画在了感知器网络的最左边。实际上，传统上我们再画一层额外的感知器---输入层---来编码输入。      
+现在，我已经将像<img src="https://www.forkosh.com/mathtex.cgi?x_1 x_2">这样的两个变量画在了感知器网络的最左边。实际上，传统上我们再画一层额外的感知器---输入层---来编码输入。      
 
 <center>      
 
@@ -133,15 +133,15 @@ description:
 它并不是没有
 
 
-  [1]:http://7xomz3.com1.z0.glb.clouddn.com/00.png?imageView2/2/w/220
-  [2]:http://7xomz3.com1.z0.glb.clouddn.com/01.png
-  [3]:http://7xomz3.com1.z0.glb.clouddn.com/02.png
-  [4]:http://7xomz3.com1.z0.glb.clouddn.com/03.jpg
-  [5]:http://7xomz3.com1.z0.glb.clouddn.com/net.png
-  [6]:http://7xomz3.com1.z0.glb.clouddn.com/04.jpg
-  [7]:http://7xomz3.com1.z0.glb.clouddn.com/05.jpg
-  [8]:http://7xomz3.com1.z0.glb.clouddn.com/06.jpg
-  [9]:http://7xomz3.com1.z0.glb.clouddn.com/07.jpg
-  [10]:http://7xomz3.com1.z0.glb.clouddn.com/08.jpg
-  [11]:http://7xomz3.com1.z0.glb.clouddn.com/09.jpg
-  [12]:http://7xomz3.com1.z0.glb.clouddn.com/10.jpg
+  [1]:https://7xomz3.com1.z0.glb.clouddn.com/00.png?imageView2/2/w/220
+  [2]:https://7xomz3.com1.z0.glb.clouddn.com/01.png
+  [3]:https://7xomz3.com1.z0.glb.clouddn.com/02.png
+  [4]:https://7xomz3.com1.z0.glb.clouddn.com/03.jpg
+  [5]:https://7xomz3.com1.z0.glb.clouddn.com/net.png
+  [6]:https://7xomz3.com1.z0.glb.clouddn.com/04.jpg
+  [7]:https://7xomz3.com1.z0.glb.clouddn.com/05.jpg
+  [8]:https://7xomz3.com1.z0.glb.clouddn.com/06.jpg
+  [9]:https://7xomz3.com1.z0.glb.clouddn.com/07.jpg
+  [10]:https://7xomz3.com1.z0.glb.clouddn.com/08.jpg
+  [11]:https://7xomz3.com1.z0.glb.clouddn.com/09.jpg
+  [12]:https://7xomz3.com1.z0.glb.clouddn.com/10.jpg
