--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -22,7 +22,7 @@ memcached -m 32 -p 11211 -d
 
 * **SSH转发原理**
 
-  很多情况下我们本地机和服务器之间的数据连接需要SSH来加密：比如翻墙，受限的服务器访问。这个时候我们可以通过端口转发，将TCP端口的数据通过SSH连接来转发，着放佛开了一条“隧道”。相信在应用Telnet，SMTP等服务的时候没少使用过，使用起来既安全又方便![ssh隧道](http://7xomz3.com1.z0.glb.clouddn.com/ssh.jpg)
+  很多情况下我们本地机和服务器之间的数据连接需要SSH来加密：比如翻墙，受限的服务器访问。这个时候我们可以通过端口转发，将TCP端口的数据通过SSH连接来转发，着放佛开了一条“隧道”。相信在应用Telnet，SMTP等服务的时候没少使用过，使用起来既安全又方便![ssh隧道](https://7xomz3.com1.z0.glb.clouddn.com/ssh.jpg)
 
   举个我最常用的例子：使用SSH搭建Jupyter notebook服务器了。我们在本地连接到远程服务器，使用本地端口转发
 
@@ -64,7 +64,7 @@ memcached -m 32 -p 11211 -d
 
      这里，-N知名没有用命令要远程执行；-f是后台执行SSH（可以没有）；-L是指定端口配置。
 
-  3. 打开浏览器，输入地址： http://localhost:8888/就可以使用服务器端的jupyter notebook 了。
+  3. 打开浏览器，输入地址： https://localhost:8888/就可以使用服务器端的jupyter notebook 了。
 
   参考： [实战SSH端口转发](https://www.ibm.com/developerworks/cn/linux/l-cn-sshforward/)
 
