--- a/_posts/计算机/2015-11-17-机器学习资源速查索引.md
+++ b/_posts/计算机/2015-11-17-机器学习资源速查索引.md
@@ -13,7 +13,7 @@ description:
 
 1.  <h3>计算机视觉</h3>
   
-    [一颗中二的哨牙](http://bucktoothsir.github.io/)
+    [一颗中二的哨牙](https://bucktoothsir.github.io/)
 
     [袁勇的博客](yongyuan.name)
 
@@ -22,25 +22,25 @@ CNN以及深度学习方向
     
 2.  <h3>待读列表</h3>
 
-    [(Python)人人都能写LSTM-RNN(实例教程)](http://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/)
+    [(Python)人人都能写LSTM-RNN(实例教程)](https://iamtrask.github.io/2015/11/15/anyone-can-code-lstm/)
 
-    [斯坦福深度学习WIKI](http://deeplearning.stanford.edu/wiki/index.php/UFLDL%E6%95%99%E7%A8%8B)     
+    [斯坦福深度学习WIKI](https://deeplearning.stanford.edu/wiki/index.php/UFLDL%E6%95%99%E7%A8%8B)     
     
-    [python也可以](http://blog.csdn.net/column/details/python-can.html)     
+    [python也可以](https://blog.csdn.net/column/details/python-can.html)     
     
     [甘宇飞](https://yufeigan.github.io/)      
     
-    [ufldl学习笔记](http://blog.csdn.net/linger2012liu/article/category/2146595)      
-    [暑期学习.概率图模型](http://www.cs.cmu.edu/~epxing/Class/10708-14/lecture.html)
+    [ufldl学习笔记](https://blog.csdn.net/linger2012liu/article/category/2146595)      
+    [暑期学习.概率图模型](https://www.cs.cmu.edu/~epxing/Class/10708-14/lecture.html)
     
 
 3.  <h3>感知机</h3>
 
-    [感知器（神经网络视角）](http://shaoxiongjiang.com/2013/03/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%85%A5%E9%97%A8-%E6%84%9F%E7%9F%A5%E5%99%A8-perceptron/)
+    [感知器（神经网络视角）](https://shaoxiongjiang.com/2013/03/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%85%A5%E9%97%A8-%E6%84%9F%E7%9F%A5%E5%99%A8-perceptron/)
 
-    [码农场带动画演示](http://www.hankcs.com/ml/the-perceptron.html)
+    [码农场带动画演示](https://www.hankcs.com/ml/the-perceptron.html)
 
-    [反向神经网络极简入门.码农场](http://www.hankcs.com/ml/back-propagation-neural-network.html)      
+    [反向神经网络极简入门.码农场](https://www.hankcs.com/ml/back-propagation-neural-network.html)      
     
-    [论文+ 代码 类arXiv http://gitxiv.com/](http://gitxiv.com/)
+    [论文+ 代码 类arXiv https://gitxiv.com/](https://gitxiv.com/)
 
