--- a/_posts/计算机/2015-11-25-台大机器学习基石.md
+++ b/_posts/计算机/2015-11-25-台大机器学习基石.md
@@ -20,7 +20,7 @@ can enumerate all candidate f as H?
 
 
 
-<p>我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="http://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )       
+<p>我们选择一个机器学习算法从Hypothesis set中选出一个g,( <img src="https://www.forkosh.com/mathtex.cgi? \small pick\hspace{0.1cm}g\epsilon H,with \hspace{0.1cm}all\hspace{0.1cm} g(x_n)=y_n(like\hspace{0.1cm} PLA\hspace{0.2cm}algorithm).\hspace{0.2cm} \underline{Does\hspace{0.2cm} g\approx f?}">  )       
 
 
 我们当然可以像感知机（PLA）那样，能够找出一个或者若干个好的g,在训练样本集（in-sample）上把所有的样本分对。上例中，
@@ -30,8 +30,8 @@ can enumerate all candidate f as H?
 
 我们可以在5个已经给出的输入上面得到g的预测是否正确，但是在未看过的三个输入上呢？我们会发现其实还有8种可能的选择。所以        
 
-* g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
-* g<img src="http://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
+* g<img src="https://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:sure!
+* g<img src="https://www.forkosh.com/mathtex.cgi? \small \approx"> f  inside D:NO!but that's really what we want!   
  
 在训练样本集（in-sample）中，可以求得一个最佳的假设g，该假设最大可能的接近目标函数f，但是在训练样本集之外的其他样本（out-of-sample）中，假设g和目标函数f可能差别很远。
 下面的练习题很简单，如果你做错了，说明这节课的还没有很好掌握奥...   
