--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -102,5 +102,6 @@ cd "$(brew --repo)/Library/Taps/homebrew/homebrew-core"
 git remote set-url origin https://github.com/Homebrew/homebrew-core.git
 ```
 
++ **vim 插件**
 
-
+  vim中浏览目录 [nerdtree](https://github.com/scrooloose/nerdtree) 
