--- a/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
+++ b/_posts/论文/2018-01-08-源码解读Chainer动态计算图.md
@@ -13,7 +13,7 @@ description:
 
 可以说Chainer的引入的动态图机制是革命性的，不得不佩服日本人开发的这款框架，简介好用，代码基于python，易于阅读，实在是居家旅行不可不少的休闲阅读佳作，这对于连**计算图**是个啥球的我来说，简直太棒了！不多说了，我们拿出[论文](https://learningsys.org/papers/LearningSys_2015_paper_33.pdf)（满篇都是日式英语，不知道怎么过的盲审），结合[代码](https://github.com/chainer/chainer)，一睹为快。
 
-<center><embed src="https://p324ywv2g.bkt.clouddn.com/chainer.pdf" width="900" height="550"></center>
+<center><embed src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/cs/20180108/chainer.pdf" width="900" height="550"></center>
 
 
 
@@ -49,17 +49,17 @@ description:
   我们引入Q-learning的算法流程：这里我们是先定义了一个模型（无论是用猪语言还是caffe的protobuf还是PyLearn2的yaml），然后框架充当一个解释器来把模型转化为~~内存中~~相应的类（definition as object of a single class, which can be regarded as an independent NN），然后程序接收数据，处理加工后输出。      
 
 
-<img src="https://p28sk9doh.bkt.clouddn.com/a.png" width="300" style="float:center">      
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/cs/20180108/a.png" width="300" style="float:center">      
 
 这里问题就出来了： 模型在定义后就占据了内存，内存利用率很低；而且一旦定义后，用户无法在对它进行修改，可扩展性很差（caffe的各种版本已经泛滥成灾）；最麻烦的是如何来对它Debug呢？这些框架像一个黑盒子一样，对用户是不可访问的！      
 + 动态计算图定义方式：
   ​    
 
-<img src="https://p28sk9doh.bkt.clouddn.com/b.png" width="300">     
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/cs/20180108/b.png" width="300">     
 
 Chainer作为原生的python库（？）让我们可以直接使用pdb就能debug程序。而且整个过程就像曾经写其他原生python代码一样爽歪歪！这里我们定义一个多层感知机      
 
-<img src="https://p28sk9doh.bkt.clouddn.com/c.png" width="500" style="float:center">     
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/cs/20180108/c.png" width="500" style="float:center">     
 
 这里，一个计算图在前向计算开始的时候，才真正的被定义了。而上图又显示各个层之间仅有层定义，没有连接起来。在前向计算中，数据在层与层之间流动。
 
@@ -90,7 +90,7 @@ print("x. grad:   ", x.grad)
 在这里，你定义了一个计算通过x得到y，然后backward就能得到导数！这样子我们只需要定义一个网络的结构，无需操心网络的反向过程就行了（当然了，Tensorlow，Pytorch等也有）。
 ​      
 
-<img src="https://p28sk9doh.bkt.clouddn.com/d.jpg" width="400" style="float:centers">      
+<img src="https://raw.githubusercontent.com/anxingle/anxingle.github.io/master/public/img/cs/20180108/d.jpg" width="400" style="float:centers">      
 
 接下来，我们需要打开Pycharm（debug很方便啊），一步一步的看数据的流动，解构反向求导的过程。
 
