Feat: 增加批量杀死进程

--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -67,17 +67,37 @@ memcached -m 32 -p 11211 -d
   3. 打开浏览器，输入地址： https://localhost:8888/就可以使用服务器端的jupyter notebook 了。
 
   参考： [实战SSH端口转发](https://www.ibm.com/developerworks/cn/linux/l-cn-sshforward/)
+  
++ **批量杀死某进程**
 
+     ```bash
+     kill -9 `ps -ef |grep Task_name |awk '{print $2}' `
+     ```
+     其中 Task_name是要杀死的进程名
++ ** fork: retry: 没有子进程、资源暂时不可用问题**
+这是由于用户的线程满了导致的。通过ulimit -a命令查看可以看到该用户的max user processes值是1024或者4096。
+```bash
+ulimit -u 10000
+```
+或者
+```bash
+$ sudo vi /etc/security/limits.d/20-nproc.conf
+*          soft    nproc     4096  # 修改为需要的
+root       soft    nproc     unlimited
+```
 
 + **GIT 使用https记住密码**      
   使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。   
 
 + **Jupyter notebook设置**        
   Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
+  
 + **MAC鼠标滚轮反向**        
   MAC的鼠标与触摸板都是采用的自然滑滚，这对于频繁切换windows／mac的人简直要崩溃：鼠标滚轮不一样啊。那么推荐可以单独对MAC的鼠标与触摸板进行[滑滚设置的插件](https://github.com/pilotmoon/Scroll-Reverser)。          
+  
 + **Dash helper**        
   [Dash for MacOS](https://kapeli.com/dash)太强大了，没时间多少了，赶紧上船吧。     
+  
 + **Home brew设置中科大（或coding）源**        
 ```python
 替换brew.git:
