--- a/_posts/计算机/2017-07-06-Linux常用命令.md
+++ b/_posts/计算机/2017-07-06-Linux常用命令.md
@@ -27,6 +27,13 @@ find demo -name "*.py"|xargs cat|grep -v ^$|wc -l
 find  PROJECT_XXX  -name "*.py"  -type f | xargs sed -i '' $'s/    /\t/g'
 ```
 
+## 开放端口
+
+```
+iptables -I INPUT 1 -p udp --dport 60000:61000 -j ACCEPT
+# 开放 60000 - 61000端口
+```
+
 ## crontab 系统服务计划
 
 对于周期性运行的工作，比如每天凌晨01：00内存内容计算并写入硬盘。可以加入系统的计划中。
