--- a/_posts/计算机/2017-07-06-Linux常用命令.md
+++ b/_posts/计算机/2017-07-06-Linux常用命令.md
@@ -24,8 +24,57 @@ find demo -name "*.py"|xargs cat|grep -v ^$|wc -l
 
 ## 某项目(project_xxx)下空格变tab
 ```
+# mac下 -i用来在源文件后组成备份文件名,这里不备份，直接为空; 同时，macos也需要给 s 参数加上$
 find  PROJECT_XXX  -name "*.py"  -type f | xargs sed -i '' $'s/    /\t/g'
 ```
+
+## xargs 命令详解
+mac下 xargs命令不支持 -d 参数，如果就是需要了，怎么办？在加一层 awk来解决, 把X换成NULL字符：
+
+```
+echo "nameXnameXnameXname" | awk '{gsub("X", "\0", $0);print $0}'|xargs -0 -n2
+# -d 参数更改分隔符
+# -p -t 打印要执行的命令，询问用户是否执行；-t参数则是打印出最终要执行的命令，然后直接执行，不需要用户确认。
+# find命令有一个参数-print0，指定输出的文件列表以null分隔。然后，xargs命令的-0参数表示用null当作分隔符。
+$ find /path -type f -print0 | xargs -0 rm # 防止文件名有空格
+# -L参数指定多少行作为一个命令行参数
+-n参数指定每次将多少项，作为命令行参数
+$ echo -e  "*.py" "*.md" |xargs -n 1 find . -name #  显示当前目录下 *.py 与 *.md
+```
+
+以及相当重要的参数 "-I参数"：
+
+```
+# -I指定每一项命令行参数的替代字符串
+$ cat foo.txt
+one
+two
+three
+
+$ cat foo.txt | xargs -I file sh -c 'echo file; mkdir file'
+one 
+two
+three
+
+$ ls 
+one two three
+```
+
+## grep命令
+
+```
+[root@www ~]# grep [-acinv] [--color=auto] '搜寻字符串' filename
+选项与参数：
+-a ：将 binary 文件以 text 文件的方式搜寻数据
+-c ：计算找到 '搜寻字符串' 的次数
+-i ：忽略大小写的不同，所以大小写视为相同
+-n ：顺便输出行号
+-v ：反向选择，亦即显示出没有 '搜寻字符串' 内容的那一行！
+# 行首与行尾字节 ^ $
+--color=auto ：可以将找到的关键词部分加上颜色的显示喔！
+```
+
+
 
 ## 开放端口
 
