--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -75,6 +75,20 @@ memcached -m 32 -p 11211 -d
      ```
      其中 Task_name是要杀死的进程名
      
++ **终端（python输出）高亮显示**
+    　开头部分：\033[显示方式;前景色;背景色m 
+结尾部分：\033[0m     
+完整格式： \033[显示方式;前景色;背景色m要打印的文字\033[0m  　　 如果有空格，空格也会打印出来
+     
+     ```
+     # 显示方式: 0（默认值）、1（高亮，即加粗）、4（下划线）、7（反显）、
+     # 前景色: 30（黑色）、31（红色）、32（绿色）、 33（黄色）、34（蓝色）、35（梅色）、36（青色）、37（白色）
+     # 背景色: 40（黑色）、41（红色）、42（绿色）、 43（黄色）、44（蓝色）、45（梅色）、46（青色）、47（白色）
+     print("\033[1;31;40m您输入的帐号或密码错误！\033[0m")   标准写法   
+     ```
+     
+     
+     
 + **fork: retry: 没有子进程、资源暂时不可用问题**
 
   这是由于用户的线程满了导致的。通过ulimit -a命令查看可以看到该用户的max user processes值是1024或者4096。
