--- a/_posts/计算机/2017-07-06-Linux常用命令.md
+++ b/_posts/计算机/2017-07-06-Linux常用命令.md
@@ -55,9 +55,16 @@ $ cat foo.txt | xargs -I file sh -c 'echo file; mkdir file'
 one 
 two
 three
+# mv 正则
+ls |grep -E  [0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[6-9]+.[3].dcm |xargs -I file sh -c "mv file ../ct_test/"
 
 $ ls 
 one two three
+# 正则删除某些文件
+ls | grep -E 正则表达式 |xargs rm
+# 统计文件数量
+ls | grep -E 正则表达式 |wc -l 
+# [0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.[0-9]+.dcm
 ```
 
 ## grep命令
@@ -82,6 +89,16 @@ one two three
 iptables -I INPUT 1 -p udp --dport 60000:61000 -j ACCEPT
 # 开放 60000 - 61000端口
 ```
+
+## 服务器传文件
+
+```
+# 已经存在的文件不传输
+find . -type f -exec chmod a-w a-w '{}' \;
+# 然后 scp
+scp target:IP:/home/xxx   ./
+```
+
 
 ## crontab 系统服务计划
 
@@ -128,6 +145,3 @@ iptables -I INPUT 1 -p udp --dport 60000:61000 -j ACCEPT
     6、每隔两天的上午8点到11点的第3和第15分钟执行
     3,15 8-11 */2 * * command
 
-
-​    
-​    
