--- a/_posts/无人驾驶/2017-10-27-无人驾驶入门-硬件demo.md
+++ b/_posts/无人驾驶/2017-10-27-无人驾驶入门-硬件demo.md
@@ -40,7 +40,7 @@ description:
 用flask转发树莓派捕获的视频:
 
 <p style="text-align: center"><iframe class="video_iframe" style="z-index:1;" src="https://v.qq.com/iframe/player.html?vid=j05662y6ylj&amp;width=500&amp;height=375&amp;auto=0" allowfullscreen="" frameborder="0" height="375" width="500"></iframe></p>
-
+(如果播放失败，请转至 https://v.qq.com/x/page/j05662y6ylj.html 查看)
 
 
 ## 程序
