--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -102,9 +102,36 @@ $ sudo vi /etc/security/limits.d/20-nproc.conf
 root       soft    nproc     unlimited
 ```
 
-+ **GIT 使用https记住密码**      
-  使用git config credential.helper store为当前仓库设置记住密码。只要运行一次pull/push就不用再输密码了。   
++ **GIT **
+  
+  | git命令       | 作用           | 备注 |
+  | :------------ |:--------------| -----:|
+  | git config credential.helper store | 为当前仓库记住密码，运行一次pull/push 就不用再输密码了 |  |
+  | git reset --hard commit_id | 回退到某个历史版本 |    |
+  | git reflog | 查看命令历史 |     |
+  | git checkout -- file | 丢弃工作区某文件的修改 |  |
+  | git reset HEAD <file> | 从暂存区放弃修改到工作区 |  |
+  | git rm <file> | 手动删除文件后从git中删除 |  |
+  | git branch | 查看分支 |  |
+  | git branch <name> | 创建分支 |  |
+  | git checkout <name> 或 git switch  <name> | 切换分支 |  |
+  | git checkout -b <name> 或 git switch -c <name> | 创建 + 切换 分支 |  |
+  | git merge <name> | 合并<name>分支 到当前分支 |  |
+  | git branch -d <name> | 删除分支 |  |
+  | git merge --no-ff -m "info" <name> | 禁用Fast forward模式，合并分支 |  |
+  | git stash/ git stash apply&drop | 保存/恢复 工作现场 |  |
+  | git cherry-pick <commit> | 将某次“提交”复制到当前分支 |  |
+  | git remote -v | 查看远程库的详细信息 |  |
+  | git remote add gitee git@gitee.comxx | 关联gitee仓库 |  |
+  | git branch --set-upstream-to dev=origin/dev dev | 指定本地dev分支与远程origin/dev的链接 |  |
+  | git checkout -b branch-name origin/branch-name | 在本地创建和远程分支对应的分支 |  |
+  | git rebase | ? |  |
+  | git tag  <name>  commit_id | 为某次提交打标签 |  |
+  | git show <tagname> | 查看标签信息 |  |
+  | git tag -a <name> -m "info" commit_id | 为某次提交打标签并说明信息 |  |
+  | git push origin --tags | 将标签全部推送到远程 |  |
 
+  
 + **Jupyter notebook设置**        
   Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
   
@@ -147,3 +174,4 @@ git remote set-url origin https://github.com/Homebrew/homebrew-core.git
 + **vim 插件**
 
   vim中浏览目录 [nerdtree](https://github.com/scrooloose/nerdtree) 
+  vim中文输入法切换[fcitx-vim-osx](https://github.com/xcodebuild/fcitx-vim-osx)
