--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -131,7 +131,6 @@ root       soft    nproc     unlimited
   | git tag -a <name> -m "info" commit_id | 为某次提交打标签并说明信息 |  |
   | git push origin --tags | 将标签全部推送到远程 |  |
 
-  
 + **Jupyter notebook设置**        
   Jupyter notebook作为强大的草稿纸，笔记本，绘图工具...实在太强大了，反正就是万能工具，默认主题太丑了。可以给它加上[漂亮的主题](https://github.com/dunovank/jupyter-themes),如果做教程或者其他需要添加目录的东西，那么[外挂必不可少](https://github.com/ipython-contrib/jupyter_contrib_nbextensions)。       
   
@@ -170,8 +169,76 @@ git remote set-url origin https://github.com/Homebrew/brew.git
 cd "$(brew --repo)/Library/Taps/homebrew/homebrew-core"
 git remote set-url origin https://github.com/Homebrew/homebrew-core.git
 ```
++ **ubuntu pip 出错**
+
+  ```
+  #ValueError: Unable to determine SOCKS version from socks://127.0.0.1:1080
+  unset all_proxy && unset ALL_PROXY
+  export all_proxy="socks5://127.0.0.1:1080"
+  ```
+
++ docker常用服务
+
+  ```
+  docker image pull hello-world # 拉取 hello-world 镜像
+  docker image ls  # 查看本机有哪些镜像
+  docker container run hello-world --name test_container  # 运行这个image(hello-world)，生成一个运行的容器实例
+  docker container ls # 列出本机正在运行的容器
+  docker container ls --all # 列出本机所有容器，包括已经终止运行的
+  docker container kill [containerID] # 终止正在运行的容器
+  docker container rm [containerID]  # 终止运行的容器依然会占据硬盘空间，可使用rm删除
+  docker container start [containerID]或[containerName] # 启动容器
+  docker attach container_id
+  或
+  docker container exec container_id /bin/bash # 进入容器终端
+  docker commit 容器名 镜像名 # 将容器保存为镜像
+  docker save -o 保存的文件路径以及文件名 镜像名
+  docker load -i 镜像名 # 加载镜像 docker load -i ./Downloads/nnUNet.tar.gz
+  docker image build -t test:0.0.1  # 创建命令test的image文件,冒号指定标签
+  docker rmi -f $(docker images -qa) # 删除所有镜像
+  
+  docker stop $(docker ps -a -q)   # 先停止运行的容器
+  docker rm $(docker ps -a -q)     # 关闭所有容器
+  
+  sudo systemctl restart docker  # 重启docker服务
+  docker login  # 登录 docker hub
+  ```
+
+  构建自己的docker image。我们新建一个文本文件 `Dockerfile`, 写入如下内容：
+
+  ```
+  FROM nvidia/cuda:11.0-base-ubuntu20.04 # 该image文件继承自官方nvidia/cuda,冒号表示标签
+  COPY . /app # 将当前目录下所有文件都拷贝入 image 的/app目录中
+  WORKDIR /app # 设置 image 的工作路径为 /app
+  RUN npm install --registry=https://registry.npm.taobao.org # 在/app目录下执行 npm install 命令，安装后的所有依赖都将打包进入 image文件
+  EXPOSE 3000 # 将容器的 3000端口暴漏出来，允许外部连接这个端口
+  ```
+
+之后就可以使用命令 ``` docker image build -t test .``` 来创建image 文件了。
+
+生成容器:
+
+```
+docker container run -p 8888:3000 --name first -it test /bin/bash -c "sh run.sh"
+```
+
+各个参数意义：
+
+```
+-p : 容器的3000端口映射到本机的8888端口
+-i : “交互模式”运行容器，
+-t : 容器启动后进入命令行
+--name : 为创建的容器命名
+-d : 创建守护式容器在后台运行
+-e : 为容器设置环境变量
+--rm : 运行完后删除 
+/bin/bash：容器启动以后，内部第一个执行的命令。这里是启动 Bash，保证用户可以使用 Shell
+```
+
+
+
 
 + **vim 插件**
 
   vim中浏览目录 [nerdtree](https://github.com/scrooloose/nerdtree) 
-  vim中文输入法切换[fcitx-vim-osx](https://github.com/xcodebuild/fcitx-vim-osx)
+  vim中文输入法切换[fcitx-vim-osx](https://github.com/xcodebuild/fcitx-vim-osx
