--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -235,7 +235,25 @@ docker container run -p 8888:3000 --name first -it test /bin/bash -c "sh run.sh"
 /bin/bash：容器启动以后，内部第一个执行的命令。这里是启动 Bash，保证用户可以使用 Shell
 ```
 
++ **docker-compose 常用命令**
 
+  ```
+  docker-compose build # 构建项目中的服务容器
+  docker-compose kill  # 通过发送 SIGKILL信号来强制停止容器
+  docker-compose config # 验证并查看compose文件配置
+  docker-compose create # 为服务创建容器（只是单纯的创建，还需start启动）
+  docker-compose down  #停止和删除容器、网络、卷、镜像，这些内容是通过docker-compose up命令创建的. 默认值删除 容器 网络，可以通过指定 rmi 、volumes参数删除镜像和卷
+  docker-compose exec # 与docker exec命令功能相同，可以通过service name登陆到容器中。
+  docker-compose logs # -f 指定服务
+  docker-compose ps  # 列出项目中目前的所有容器
+  docker-compose pull # 拉取服务依赖的镜像
+  docker-compose rm [options] [SERVICE...] # 删除所有（停止状态的）服务容器。
+  docker-compose up [options] [SERVICE...] # 自动完成包括构建镜像，（重新）创建服务，启动服务，并关联服务相关容器的一些列操作
+  ```
+
+  
+
+ 
 
 
 + **vim 插件**
