--- a/_posts/计算机/2017-08-03-系统常用服务.md
+++ b/_posts/计算机/2017-08-03-系统常用服务.md
@@ -248,15 +248,26 @@ docker container run -p 8888:3000 --name first -it test /bin/bash -c "sh run.sh"
   docker-compose ps  # 列出项目中目前的所有容器
   docker-compose pull # 拉取服务依赖的镜像
   docker-compose rm [options] [SERVICE...] # 删除所有（停止状态的）服务容器。
-  docker-compose up [options] [SERVICE...] # 自动完成包括构建镜像，（重新）创建服务，启动服务，并关联服务相关容器的一些列操作
+  docker-compose up [options] [SERVICE...] # 自动完成包括构建镜像，（重新）创建服务，启动服务，并关联服务相关容器的一些列操作 
   ```
 
-  
-
- 
 
 
 + **vim 插件**
 
   vim中浏览目录 [nerdtree](https://github.com/scrooloose/nerdtree) 
   vim中文输入法切换[fcitx-vim-osx](https://github.com/xcodebuild/fcitx-vim-osx
+
+* bash 快捷键
+
+  ```
+  ctrl+a： 光标移动到行首
+  ctrl+e： 光标移动到行尾
+  ctrl+u： 从光标处删除至命令行首
+  ctrl+k： 从光标处删除至命令行尾
+  Ctrl+y： 粘贴至光标后
+  !!：   执行上一条命令
+  !blah：执行最近的以 blah 开头的命令，如 !ls
+  ```
+
+  
